--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
   },
   "homepage": "https://github.com/Dogecoin-2-0/timelock-tx#readme",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/test-helpers": "^0.5.15",
-    "@truffle/hdwallet-provider": "^2.0.4",
     "bignumber.js": "^9.0.2",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^3.0.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "ethers": "^5.6.9",
+    "hardhat": "^2.9.9"
   }
 }
