--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx hardhat --network ganache test",
     "format": "prettier --write **/**/*.{js,sol}"
   },
   "repository": {
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/Dogecoin-2-0/timelock-tx#readme",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-ganache": "^2.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/test-helpers": "^0.5.15",
     "bignumber.js": "^9.0.2",
@@ -27,7 +29,10 @@
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^3.0.0",
     "dotenv": "^16.0.0",
+    "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
-    "hardhat": "^2.9.9"
+    "hardhat": "^2.9.9",
+    "mocha": "^10.0.0",
+    "prettier-plugin-solidity": "^1.0.0-beta.19"
   }
 }
