--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx hardhat --network ganache test",
-    "format": "prettier --write **/**/*.{js,sol}"
+    "test": "npx hardhat test",
+    "format": "prettier --write **/**/*.{js,sol}",
+    "deploy:bsc:testnet": "npx hardhat run scripts/deploy.js --network binance_testnet"
   },
   "repository": {
     "type": "git",
@@ -20,14 +21,10 @@
   "homepage": "https://github.com/Dogecoin-2-0/timelock-tx#readme",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
-    "@nomiclabs/hardhat-ganache": "^2.0.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
-    "@openzeppelin/test-helpers": "^0.5.15",
-    "bignumber.js": "^9.0.2",
     "chai": "^4.3.6",
-    "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "^3.0.0",
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
